fixed issue with gif spacing. margins still glitchy

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body {
 
 #animalDiv {
     margin: 1%;
+    width: fit-content;
 }
 
 .gif {
@@ -35,6 +36,10 @@ h1 {
     padding-bottom: 1%;
     color: #478e9b;
     border-bottom: solid 2px #32666f; 
+}
+
+p {
+    font-size: 20px;
 }
 
 #gif-input {
